--- a/calabash/pom.xml
+++ b/calabash/pom.xml
@@ -30,7 +30,9 @@
 
   <properties>
     <!-- TODO switch to a proper tag when 1.0.4 is tagged -->
-    <calabash.source.url>http://nodeload.github.com/ndw/xmlcalabash1/zipball/saxon94</calabash.source.url>
+    <!-- <calabash.source.url>http://nodeload.github.com/ndw/xmlcalabash1/zipball/saxon94</calabash.source.url> -->
+    <calabash.source.url>http://github.com/ndw/xmlcalabash1/zipball/saxon94</calabash.source.url>
+
   </properties>
 
   <dependencies>
@@ -60,6 +62,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>javax.mail-api</artifactId>
+	    <version>1.4.5</version>
+      <optional>true</optional>
+	</dependency>
     <dependency>
       <groupId>org.ccil.cowan.tagsoup</groupId>
       <artifactId>tagsoup</artifactId>
@@ -72,10 +80,16 @@
       <version>1.3.1</version>
       <optional>true</optional>
     </dependency>
+	<dependency>
+	    <groupId>xmlunit</groupId>
+	    <artifactId>xmlunit</artifactId>
+	    <version>1.3</version>
+      <optional>true</optional>
+	</dependency>
   </dependencies>
 
   <build>
-    <sourceDirectory>${basedir}/target/src</sourceDirectory>
+    <sourceDirectory>${basedir}/target/src/src</sourceDirectory>
 
     <extensions>
       <extension>
@@ -84,6 +98,19 @@
         <version>1.0</version>
       </extension>
     </extensions>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.3.1</version>
+          <configuration>
+            <arguments>-Pdaisy-libs-release</arguments>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
 
     <plugins>
       <plugin>
@@ -94,7 +121,6 @@
           </excludes>
         </configuration>
       </plugin>
-
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
@@ -140,9 +166,63 @@
           </execution>
         </executions>
       </plugin>
-
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>daisy-libs-release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>pack-sources</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+                <configuration>
+                  <descriptors>
+                    <descriptor>sources.xml</descriptor>
+                  </descriptors>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>attach-javadoc</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <configuration>
+              <useAgent>true</useAgent>
+            </configuration>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 
 </project>
