--- a/jing/pom.xml
+++ b/jing/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
-    <version>1</version>
+    <version>2-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -57,12 +57,7 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.3.1</version>
-          <configuration>
-            <arguments>-Pdaisy-libs-release</arguments>
-          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -148,11 +143,7 @@
             </executions>
           </plugin>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <configuration>
-              <useAgent>true</useAgent>
-            </configuration>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
