--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,13 @@
 
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.daisy</groupId>
+    <artifactId>daisy</artifactId>
+    <version>2-SNAPSHOT</version>
+    <relativePath/>
+  </parent>
+
   <groupId>org.daisy.libs</groupId>
   <artifactId>libs-aggregator</artifactId>
   <version>1.0-SNAPSHOT</version>
