--- a/commons-httpclient/pom.xml
+++ b/commons-httpclient/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
-    <version>2-SNAPSHOT</version>
-    <relativePath/>
+    <version>2</version>
+    <relativePath />
   </parent>
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>commons-httpclient</artifactId>
-  <version>3.1.0-SNAPSHOT</version>
+  <version>3.1.0</version>
   <packaging>bundle</packaging>
 
   <name>Apache Commons HTTP Client (OSGi bundle)</name>
@@ -133,4 +133,8 @@
     </profile>
   </profiles>
 
+
+  <scm>
+    <tag>commons-httpclient-3.1.0</tag>
+  </scm>
 </project>
