--- a/servlet-api/pom.xml
+++ b/servlet-api/pom.xml
@@ -7,12 +7,12 @@
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
     <version>2</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>servlet-api</artifactId>
-  <version>2.5.0-SNAPSHOT</version>
+  <version>2.5.0</version>
   <packaging>bundle</packaging>
 
   <name>JavaServlet(TM) Specification (OSGi Bundle)</name>
@@ -136,4 +136,8 @@
   </profiles>
 
 
+
+  <scm>
+    <tag>servlet-api-2.5.0</tag>
+  </scm>
 </project>
