--- a/jing/pom.xml
+++ b/jing/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
-    <version>2-SNAPSHOT</version>
-    <relativePath/>
+    <version>2</version>
+    <relativePath />
   </parent>
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>jing</artifactId>
-  <version>20091111.0.0-SNAPSHOT</version>
+  <version>20091111.0.0</version>
   <packaging>bundle</packaging>
 
   <name>Jing (OSGi bundle)</name>
@@ -31,6 +31,7 @@
   <scm>
     <connection>http://jing-trang.googlecode.com/svn/trunk/</connection>
     <url>http://code.google.com/p/jing-trang/source/browse/</url>
+    <tag>jing-20091111.0.0</tag>
   </scm>
   <developers>
     <developer>
