--- a/brailleutils/core/pom.xml
+++ b/brailleutils/core/pom.xml
@@ -6,20 +6,71 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.daisy.libs</groupId>
-    <artifactId>brailleutils</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <groupId>org.daisy</groupId>
+    <artifactId>daisy</artifactId>
+    <version>2</version>
+    <relativePath/>
   </parent>
 
+  <groupId>org.daisy.libs</groupId>
   <artifactId>brailleutils-core</artifactId>
+  <version>1.2.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
-  <name>Braille Utils - Core</name>
+  <name>Braille Utils</name>
+  <description>Braille Utils is a cross platform utility package for embossing and converting PEF-files.</description>
+  <url>http://code.google.com/p/brailleutils/</url>
+
+  <licenses>
+    <license>
+      <name>GNU Lesser General Public License</name>
+      <url>http://www.gnu.org/licenses/lgpl.html</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Joel Håkansson</name>
+      <organization>TPB - Talboks- och punktskriftsbiblioteket</organization>
+      <organizationUrl>http://www.tpb.se/</organizationUrl>
+      <roles>
+        <role>Project leader</role>
+      </roles>
+    </developer>
+    <developer>
+      <name>Magnus Karlströms</name>
+      <organization>TPB - Talboks- och punktskriftsbiblioteket</organization>
+      <organizationUrl>http://www.tpb.se/</organizationUrl>
+      <roles>
+        <role>Backup project leader</role>
+      </roles>
+    </developer>
+    <developer>
+      <name>Bert Frees</name>
+      <email>bertfrees@gmail.com</email>
+      <organization>SBS - Schweizerische Bibliothek für Blinde, Seh- und Lesebehinderte</organization>
+      <organizationUrl>http://sbs.ch/</organizationUrl>
+      <roles>
+        <role>Committer</role>
+      </roles>
+    </developer>
+  </developers>
 
   <dependencies>
     <dependency>
-      <groupId>org.daisy.libs</groupId>
+      <groupId>com.thaiopensource</groupId>
       <artifactId>jing</artifactId>
+      <version>20091111</version>
+    </dependency>
+    <dependency>
+      <groupId>stax</groupId>
+      <artifactId>stax-api</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>1.3.04</version>
     </dependency>
   </dependencies>
 
