--- a/jstyleparser/pom.xml
+++ b/jstyleparser/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>jstyleparser</artifactId>
-  <version>1.7.0</version>
+  <version>1.7.0-p1-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>jStyleParser</name>
@@ -78,7 +78,7 @@
 
   <scm>
     <connection>scm:svn:http://cssbox.svn.sourceforge.net/svnroot/cssbox/jstyleparser/tags/1.7/src/cz</connection>
-    <tag>jstyleparser-1.7.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
