Added jsslutils for jetty support

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <module>jing</module>
     <module>saxon</module>
     <module>servlet-api</module>
+    <module>jsslutils</module>
   </modules>
 
 </project>
