--- a/jsslutils/pom.xml
+++ b/jsslutils/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.daisy.libs</groupId>
   <artifactId>jsslutils</artifactId>
-  <version>0.5.1</version>
+  <version>1.0.7</version>
   <packaging>bundle</packaging>
   <name>jSSLutils</name>
   <url>http://www.jsslutils.org/</url>
@@ -134,6 +134,12 @@
                 <goals>
                   <goal>single</goal>
                 </goals>
+                <configuration>
+                  <descriptors>
+                    <descriptor>sources.xml</descriptor>
+                    <descriptor>javadoc.xml</descriptor>
+                  </descriptors>
+                </configuration>
               </execution>
             </executions>
           </plugin>
