--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
-    <version>2-SNAPSHOT</version>
+    <version>2</version>
     <relativePath/>
   </parent>
 
@@ -22,9 +22,9 @@
     <module>calabash</module>
     <module>commons-httpclient</module>
     <module>jing</module>
+    <module>jsslutils</module>
     <module>saxon</module>
     <module>servlet-api</module>
-    <module>jsslutils</module>
   </modules>
 
 </project>
