a small remark for the developers element

--- a/mysql/pom.xml
+++ b/mysql/pom.xml
@@ -36,6 +36,7 @@
         </url>
   </scm>
   <developers>
+	  <!--None present in the original pom -->
   </developers>
   <properties>
     <lib.groupId>mysql</lib.groupId>
